fixed alignment of pricing component

--- a/packages/ui/components/pricing/Pricing.module.css
+++ b/packages/ui/components/pricing/Pricing.module.css
@@ -2,8 +2,10 @@
   background: var(--Primary-blue, rgba(79, 70, 229, 1));
   border-radius: 16px;
   padding: 48px 32px;
-  margin: 0 auto;
+  margin: 32px auto;
   max-width: 1440px;
+  width: 85vw;
+  margin: 0 auto;
 }
 
 .heading {
@@ -33,4 +35,27 @@
   gap: 32px;
   margin: 0 auto;
   max-width: 1156px;
+}
+
+@media (max-width: 768px) {
+  .mainDiv {
+    margin: 16px auto;
+    padding: 3rem 1rem;
+    width: 80vw;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1280px) {
+  .mainDiv{
+    margin-top: 32px;
+    width: 80vw;
+  }
+}
+@media (min-width: 1440px) and (max-width: 2560px) {
+  .mainDiv{
+    margin-top: 32px;
+  }
 }
